Fixing lint issues

--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -106,6 +106,7 @@
                     app:shapeAppearance="@style/ShapeAppearance.Grocery.FAB"
                     app:layout_anchorGravity="bottom|end"
                     app:layout_constraintTop_toBottomOf="@id/item_detail_name"
+                    app:layout_constraintRight_toLeftOf="@id/fab_delete"
                     app:srcCompat="@drawable/ic_minus"
                     android:outlineSpotShadowColor="@color/design_default_color_on_primary"
                     android:contentDescription="@string/add_button_descriptor"
@@ -122,6 +123,7 @@
                     android:outlineSpotShadowColor="@color/design_default_color_on_primary"
                     app:shapeAppearance="@style/ShapeAppearance.Grocery.FAB"
                     app:layout_anchorGravity="bottom|end"
+                    app:layout_constraintTop_toBottomOf="@id/item_detail_name"
                     app:layout_constraintLeft_toRightOf="@id/fab_remove"
                     app:srcCompat="@drawable/ic_delete"
                     android:contentDescription="@string/add_button_descriptor"
