--- a/app/src/main/res/layout/list_item_grocery_iteming.xml
+++ b/app/src/main/res/layout/list_item_grocery_iteming.xml
@@ -32,11 +32,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_normal"
-                android:text="@{viewModel.itemName}"
                 android:gravity="center_horizontal"
+                android:text="@{viewModel.itemName}"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
