--- a/app/src/main/res/navigation/nav_grocery.xml
+++ b/app/src/main/res/navigation/nav_grocery.xml
@@ -8,16 +8,30 @@
 
     <fragment
         android:id="@+id/nav_groceries"
-        android:name="com.semblanceoffunctionality.grocery.GroceryFragment"
+        android:name="com.semblanceoffunctionality.grocery.ui.grocerylist.GroceryFragment"
         android:label="@string/my_grocery_title"
         tools:layout="@layout/fragment_desired_groceries">
     </fragment>
 
     <fragment
-        android:id="@+id/all_groceries"
-        android:name="com.semblanceoffunctionality.grocery.GroceryFragment"
+        android:id="@+id/nav_all_groceries"
+        android:name="com.semblanceoffunctionality.grocery.ui.itemlist.ItemListFragment"
         android:label="@string/item_list_title"
         tools:layout="@layout/fragment_grocery">
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_item_detail"
+        android:name="com.semblanceoffunctionality.grocery.ui.itemdetail.ItemDetailFragment"
+        android:label="@string/item_details"
+        tools:layout="@layout/fragment_item_detail">
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_store_list"
+        android:name="com.semblanceoffunctionality.grocery.ui.stores.StoreListFragment"
+        android:label="@string/store_list"
+        tools:layout="@layout/fragment_store_list">
     </fragment>
 
 </navigation>
