--- a/app/src/main/res/navigation/nav_grocery.xml
+++ b/app/src/main/res/navigation/nav_grocery.xml
@@ -11,6 +11,13 @@
         android:name="com.semblanceoffunctionality.grocery.ui.grocerylist.GroceryFragment"
         android:label="@string/my_grocery_title"
         tools:layout="@layout/fragment_desired_groceries">
+        <action
+            android:id="@+id/action_nav_groceries_to_nav_item_detail"
+            app:destination="@id/nav_item_detail" />
+        <argument
+            android:name="item"
+            app:argType="string"
+            />
     </fragment>
 
     <fragment
@@ -18,6 +25,13 @@
         android:name="com.semblanceoffunctionality.grocery.ui.itemlist.ItemListFragment"
         android:label="@string/item_list_title"
         tools:layout="@layout/fragment_grocery">
+        <action
+            android:id="@+id/action_nav_all_groceries_to_nav_item_detail"
+            app:destination="@id/nav_item_detail" />
+        <argument
+            android:name="item"
+            app:argType="string"
+            />
     </fragment>
 
     <fragment
@@ -25,6 +39,9 @@
         android:name="com.semblanceoffunctionality.grocery.ui.itemdetail.ItemDetailFragment"
         android:label="@string/item_details"
         tools:layout="@layout/fragment_item_detail">
+        <argument
+            android:name="itemId"
+            app:argType="string" />
     </fragment>
 
     <fragment
