--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -11,13 +11,13 @@
             type="com.semblanceoffunctionality.grocery.ui.itemdetail.ItemDetailViewModel" />
         <variable
             name="addCallback"
-            type="com.semblanceoffunctionality.grocery.ui.itemdetail.ItemDetailFragment" />
+            type="com.semblanceoffunctionality.grocery.ui.itemdetail.ItemDetailFragment.AddCallback" />
         <variable
             name="removeCallback"
-            type="com.semblanceoffunctionality.grocery.ui.itemdetail.ItemDetailFragment" />
+            type="com.semblanceoffunctionality.grocery.ui.itemdetail.ItemDetailFragment.RemoveCallback" />
         <variable
             name="deleteCallback"
-            type="com.semblanceoffunctionality.grocery.ui.itemdetail.ItemDetailFragment" />
+            type="com.semblanceoffunctionality.grocery.ui.itemdetail.ItemDetailFragment.DeleteCallback" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -37,33 +37,6 @@
             android:stateListAnimator="@animator/show_toolbar"
             android:background="?attr/colorSurface"
             android:animateLayoutChanges="true">
-
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/toolbar_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorSurface"
-                app:statusBarScrim="?attr/colorSurface"
-                app:collapsedTitleGravity="center"
-                app:collapsedTitleTextAppearance="@style/TextAppearance.Grocery.Toolbar.Text"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:title="@{viewModel.item.name}"
-                app:titleEnabled="false"
-                app:toolbarId="@id/toolbar">
-
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="@android:color/transparent"
-                    app:titleTextColor="?attr/colorOnSurface"
-                    app:layout_collapseMode="pin"
-                    app:contentInsetStartWithNavigation="0dp"
-                    app:navigationIcon="@drawable/ic_detail_back"
-                    app:menu="@menu/menu_item_detail" />
-
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
