--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -82,6 +82,7 @@
                     app:srcCompat="@drawable/ic_minus"
                     android:outlineSpotShadowColor="@color/design_default_color_on_primary"
                     android:contentDescription="@string/add_button_descriptor"
+                    android:onClick="@{() -> removeCallback.remove(viewModel.item)}"
                     app:tint="@android:color/white" />
 
 
@@ -97,6 +98,7 @@
                     app:layout_constraintTop_toBottomOf="@id/item_detail_name"
                     app:layout_constraintLeft_toRightOf="@id/fab_remove"
                     app:srcCompat="@drawable/ic_delete"
+                    android:onClick="@{() -> deleteCallback.delete(viewModel.item)}"
                     android:contentDescription="@string/add_button_descriptor"
                     app:tint="@android:color/white" />
 
