Working Store Detail page. The toggle button is useless

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="grocery_white">#deffffff</color>
     <color name="grocery_yellow_300">#f8f99f</color>
     <color name="grocery_yellow_500">#ffff63</color>
+    <color name="grocery_check">#49bb79</color>
 </resources>
