--- a/app/src/main/res/layout/list_store_status.xml
+++ b/app/src/main/res/layout/list_store_status.xml
@@ -37,10 +37,13 @@
                     android:text="@{stockStatus.store}"
                     android:textAppearance="?attr/textAppearanceListItem"
                     android:gravity="center_horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:text="Store Name"/>
+                <com.semblanceoffunctionality.grocery.ui.StatusSwitcher
+                    android:layout_width="wrap_content"
+                    app:layout_constraintStart_toEndOf="@+id/store_item_title"
+                    android:layout_height="match_parent"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
