Made the radio group, but still need to hook up listener and initial state to stock status

--- a/app/src/main/res/layout/fragment_store_detail.xml
+++ b/app/src/main/res/layout/fragment_store_detail.xml
@@ -65,7 +65,7 @@
             android:layout_gravity="bottom"
             android:layout_width="match_parent"
             android:layout_height="500dp"
-            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:spanCount="@integer/grid_columns"
             tools:listitem="@layout/list_item_status"/>
 
