--- a/app/src/main/res/layout/list_item_status.xml
+++ b/app/src/main/res/layout/list_item_status.xml
@@ -41,6 +41,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:text="Item Name"/>
 
+                <include layout="@layout/status_buttons" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.semblanceoffunctionality.grocery.views.MaskedCardView>
