WIP: Change status working, but sets to stocked automatically

--- a/app/src/main/res/layout/list_store_status.xml
+++ b/app/src/main/res/layout/list_store_status.xml
@@ -45,6 +45,7 @@
                     layout="@layout/status_buttons"
                     android:id="@+id/status_buttons"
                     app:stockStatus="@{stockStatus}"
+                    app:stockName="@{stockStatus.store}"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
