--- a/app/src/main/res/values/attrs_status_image_radio_button.xml
+++ b/app/src/main/res/values/attrs_status_image_radio_button.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="StatusImageRadioButton">
+    <declare-styleable name="StatusRadioButton">
         <attr name="statusImage" format="reference" />
         <attr name="statusPressedImageTint" format="color" />
         <attr name="statusUnpressedImageTint" format="color" />
         <attr name="statusPressedBackgroundDrawable" format="reference" />
+        <attr name="stockName" format="string" />
     </declare-styleable>
 </resources>
