Callback is definitely working now, but nevigating back shows an out of date view

--- a/app/src/main/res/layout/list_item_status.xml
+++ b/app/src/main/res/layout/list_item_status.xml
@@ -43,6 +43,7 @@
 
                 <include
                     layout="@layout/status_buttons"
+                    android:id="@+id/status_buttons"
                     app:stockStatus="@{stockStatus}"
                     />
 
